@@ -1,7 +1,8 @@
-2008-7-10  Yu-Sung Su     <ys463@columbia.edu>  
+2008-7-16  Yu-Sung Su     <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 1.1-11.
     * R/coefplot: add options add=TRUE and epsilon=.1, 
         so coefplot can plot over the existing plot.
+    * R/bayespolr: rep start values to have the same length of coef + zeta
 
 2008-7-10  Yu-Sung Su     <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 1.1-10.
